@@ -1,5 +1,9 @@
 2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineCellRenderer.cpp: 
+
+2014-08-23  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* LODEditor.xml:
 	* url_error.wrl:
 	* TextEditor.xml:
